--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,7 @@ body {
   font-family: "Inter", sans-serif;
   color: #062e4d;
   font-size: 16px;
+  background-color: rgb(245 247 249 / var(--tw-bg-opacity, 1));
 }
+
+
