--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,8 @@ body {
   background-color: rgb(245 247 249 / var(--tw-bg-opacity, 1));
 }
 
+h1,th{
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+}
 
