--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@ body {
   background-color: rgb(245 247 249 / var(--tw-bg-opacity, 1));
 }
 
-h1,th{
+h1,
+h2,
+th {
   font-family: "Ubuntu", sans-serif;
   font-weight: 500;
 }
-
